fixed nav alignment

--- a/Style/style.css
+++ b/Style/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .accordion,
 .dropdown-item {
@@ -6,8 +6,9 @@
 }
 
 .nav-gitLink {
-  height: 45px;
-  width: 50px;
+  display: flex;
+  height: 100%;
+  width: 45px;
   border-radius: 50px;
   cursor: pointer;
   float: left;
@@ -16,7 +17,21 @@
 }
 
 .nav-gitLink:hover {
-  width: 200px;
+  width: 125px;
+}
+
+.nav-gitLink span {
+  display: flex;
+  align-items: center;
+  width: 0;
+  transform: translateX(120px);
+  margin-left: 5px;
+  transition: all 0.6s ease-in-out;
+}
+
+.nav-gitLink:hover span {
+  width: 100px;
+  transform: translateX(0px);
 }
 
 .nav-gitLink .nav-gitIcon {
@@ -49,7 +64,7 @@
 }
 
 .github-img.nav {
-  width: 33px;
+  width: 30px;
 }
 
 .dropdown-item:hover {
@@ -62,8 +77,8 @@
 }
 
 .container {
-  font-family: "Roboto", sans-serif;
-  overflow: "hidden" !important;
+  font-family: 'Roboto', sans-serif;
+  overflow: 'hidden' !important;
 }
 
 /* Individual sections */
@@ -137,7 +152,7 @@
 
 /* Logo */
 .topTitle {
-  font-family: "Rubik", sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 21px;
   font-weight: 300;
   color: #69bf8a;
@@ -147,8 +162,7 @@
   border: 0px !important;
 }
 
-
-.active{
+.active {
   font-size: 16px;
   font-weight: 300;
 }
@@ -161,8 +175,8 @@
 
 /* Boxes at top of the page */
 .counter-box {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
   border-radius: 8px;
   display: block;
@@ -188,8 +202,8 @@
 
 /* Population in boxes at top of the page */
 .counter {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-variant: tabular-nums;
   display: block;
   font-size: 32px;
@@ -206,8 +220,8 @@
 
 /* Fully vaccinated population percentage */
 .counter1 {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-variant: tabular-nums;
   display: block;
   font-size: 32px;
@@ -305,7 +319,6 @@
   box-shadow: 6px 6px 4px -4px #f1f1;
 }
 
-
 .nav-link:hover,
 .nav-gitLink:hover {
   color: #2abfa7 !important;
@@ -327,8 +340,15 @@
 }
 
 /* Navbar socials toggler */
+
+.nav-item,
+.nav-gitIcon {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("Images/sharing.png");
+  background-image: url('Images/sharing.png');
   background-size: 100%;
   background-position: center center;
   width: 30px;
@@ -352,7 +372,7 @@
 }
 
 /* Search bar for countries */
-.search{
+.search {
   transition: 0.3s;
   width: 100%;
   border: none;
@@ -370,12 +390,13 @@
 }
 .search:focus {
   outline: none;
-  box-shadow: rgb(0 0 0 / 15%) 0px 4px 10px -1px, rgb(0 0 0 / 7.5%) 0px 2px 4px -1px
+  box-shadow: rgb(0 0 0 / 15%) 0px 4px 10px -1px,
+    rgb(0 0 0 / 7.5%) 0px 2px 4px -1px;
 }
 
 #dropdownMenuButton > img {
-  width: 25px; 
-  padding-right:10px;
+  width: 25px;
+  padding-right: 10px;
 }
 
 /* Contributors card in about.html */
@@ -390,7 +411,7 @@
   font-size: 18px;
   color: #424242;
   font-weight: 300;
-  padding:18px;
+  padding: 18px;
   text-align: center;
 }
 
@@ -398,6 +419,6 @@
   font-size: 15px;
   color: #424242;
   font-weight: 300;
-  padding:18px;
+  padding: 18px;
   text-align: center;
 }
